data/derived/comb/progs/unify/prog3361.ml.out
Characters 86-87:
  | (h::t) -> h + t;;
                  ^
Error: This expression has type int list
       but an expression was expected of type int
